--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - 
+      name: Moving /var/lib/docker to /mnt/docker
+      run: |
+        sudo systemctl stop docker
+        echo '{"data-root": "/mnt/docker"}' | sudo tee /etc/docker/daemon.json
+        sudo mv /var/lib/docker /mnt/docker
+        sudo systemctl start docker
     -
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
